kubernetes/examples/grafana/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: grafana

spec:
  ports:
  - port: 3000
  selector:
    app: grafana
